# MediaProxy

./: ThreadUtil优化方案.md  settings.gradle.kts
Proxy/: build.gradle.kts
Proxy/libs/prebuilt/arm64-v8a/include/openssl/: opensslconf.h
Proxy/src/androidTest/java/com/media/proxy/: ExampleInstrumentedTest.kt
Proxy/src/main/cpp/: CMakeLists.txt  proxy.cpp  proxy_jni.cpp
Proxy/src/main/cpp/base/: Base64Util.cpp  Base64Util.h  BaseUtil.cpp  BaseUtil.h  GzipUtil.cpp  GzipUtil.h  JsonParser.cpp  JsonParser.h  LRUCache.h  MD5Util.cpp  MD5Util.h
Proxy/src/main/cpp/cache/disk/: DiskCache.cpp  DiskCache.h  FileCacheInterface.cpp  FileCacheInterface.h  MappedFile.cpp  MappedFile.h
Proxy/src/main/cpp/cache/manager/: CacheInfo.h
Proxy/src/main/cpp/cache/memory/: MemoryCache.cpp  MemoryCache.h  MemoryMediaCache.cpp  MemoryMediaCache.h
Proxy/src/main/cpp/common/: PreloadCommon.h  STLCommon.h  Singleton.h  SingletonShared.h  SpinMutex.h  ThreadUtil.h  Util.cpp  Util.h
Proxy/src/main/cpp/http/: HttpClient.cpp  HttpClient.h  URIParser.cpp  URIParser.h
Proxy/src/main/cpp/interface/: ProxyInterface.cpp  ProxyInterface.h
Proxy/src/main/cpp/preload/: HttpTaskInfo.h  ITaskInfo.h  PreloadTask.cpp  PreloadTask.h
Proxy/src/main/cpp/utils/: StatisUtil.cpp  StatisUtil.h  log_utils.h
Proxy/src/main/java/com/media/proxy/: LimitedQueue.kt  NativeLib.kt  ProxyPreload.kt
Proxy/src/main/java/com/media/proxy/interfaces/: OnReportListener.kt  PreloadTaskCompleteListener.kt  ProxyEventListener.kt  ProxyServerResultListener.kt  QuicListener.kt
Proxy/src/main/java/com/media/proxy/task/: HttpTaskInfo.kt  ITaskInfo.kt
Proxy/src/test/java/com/media/proxy/: ExampleUnitTest.kt
app/: build.gradle.kts
app/src/androidTest/java/com/media/proxy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/media/proxy/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
